# time-manager

./: .dockerignore  .env.example  .env_example  .gitignore  LICENSE  README.md  compose.yml  docker-compose.yml  sonar-project.properties  stack.yml  traefik.compose.yml
.github/: copilot-instructions.md
.sonarlint/: connectedMode.json
backend/: .coverage  .dockerignore  Dockerfile  TEST.py  compose.yml  dockerfile  pyproject.toml  pytest.ini  ruff.toml  test_token.py
backend/PrimeBank/: manage.py
backend/PrimeBank/PrimeBank/: asgi.py  schema.py  settings.py  settings_test.py  urls.py  wsgi.py
backend/PrimeBank/PrimeBankApp/: apps.py  models.py  roles.py  schema_auth.py  schema_kpi.py  schema_team.py  schema_timeClock.py  schema_time_clock.py  schema_timeclock_export.py  schema_user.py  tests.py  views.py  views_timeclock_export.py  views_timeclock_pdf_export.py
backend/PrimeBank/PrimeBankApp/kpi_functions/: __init__.py  kpi_functions.py
backend/PrimeBank/PrimeBankApp/migrations/: 0001_initial.py  0002_rename_team_id_customuser_team_and_more.py  0003_remove_team_members_nr_alter_customuser_team_and_more.py  0004_customuser_is_admin.py  0005_alter_timeclock_clock_in_alter_timeclock_clock_out.py  0006_requestmodifytimeclock.py  0007_remove_requestmodifytimeclock_old_clock_in_and_more.py  0008_requestmodifytimeclock_old_clock_in_and_more.py
backend/PrimeBank/PrimeBankApp/templates/: pdf_report.html
backend/PrimeBank/tests/: conftest.py  test_app_kpi_functions.py  test_kpi_functions.py  test_schema_auth.py  test_schema_kpi.py  test_schema_team.py  test_schema_team_roles.py  test_schema_time_clock_unit.py  test_schema_timeclock_export.py  test_schema_user.py  test_timeclock_schema_unit.py  test_views_timeclock_export.py
backend/scripts/: entrypoint.sh
frontend/: README.md  (+15 more)
(+127 files in other folders)
