[project]
name = "backend"
version = "0.1.0"
description = "The Django backend for the time-management app."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "django-graphql-jwt>=0.4.0",
    "graphene-django>=3.2.3",
    "psycopg[binary]>=3.2.10",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

