[project]
name = "backend"
version = "0.1.0"
description = "The Django backend for the time-management app."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "dj-database-url>=3.0.1",
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-graphql-jwt>=0.4.0",
    "django-health-check>=3.20.0",
    "graphene-django>=3.2.3",
    "psycopg[binary]>=3.2.10",
    "pyjwt>=2.10.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.15.1",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = ["ruff>=0.14.0"]

[tool.pytest.ini_options]
pythonpath = ["PrimeBank"]
DJANGO_SETTINGS_MODULE = "PrimeBank.settings"
python_files = ["test_*.py"]
